@@ -165,6 +165,8 @@ specify-all-reserved: yes
 # All reserved entries listed will replace entire default reserved words list.
 #   Words ending with * will be treated as context-sensitive words. This will be
 # ignored if GnuCOBOL uses that word as a reserved word.
+#   Entries of the form word-1=word-2 define word-1 as an alias for default
+# reserved word word-2. No spaces are allowed around the equal sign.
 reserved:	ACCEPT
 reserved:	ACCESS
 reserved:	ACTIVE-CLASS
