@@ -1,4 +1,9 @@
 
+2016-03-18  Edward Hart <edward.dan.hart@gmail.com>
+
+	* reserved.c, config.c, cobc.h: added ability to specify aliases for
+	  default reserved words (Wish List #112).
+
 2016-03-09  Edward Hart <edward.dan.hart@gmail.com>
 
 	* reserved.c, cobc.h: enhanced reserved conf. option to allow
